// Vitest Snapshot v1

exports[`Deselect 1`] = `
"<div class=\\"_Select_1b074e _multiple_1b074e\\"><button style=\\"--bnt-rgb: 58,134,255;\\" type=\\"button\\" class=\\"_Button_a73d48 _default_a73d48 _active_a73d48 _rounded_a73d48\\">
    <div class=\\"_content_a73d48\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option one
    </div>
    <!--v-if-->
  </button><button style=\\"--bnt-rgb: 58,134,255;\\" type=\\"button\\" class=\\"_Button_a73d48 _default_a73d48 _active_a73d48 _rounded_a73d48\\">
    <div class=\\"_content_a73d48\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option two
    </div>
    <!--v-if-->
  </button><button type=\\"button\\" class=\\"_Button_a73d48 _default_a73d48 _rounded_a73d48\\">
    <div class=\\"_content_a73d48\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option three
    </div>
    <!--v-if-->
  </button></div>"
`;

exports[`Select a value 1`] = `
"<div class=\\"_Select_1b074e\\"><button style=\\"--bnt-rgb: 58,134,255;\\" type=\\"button\\" class=\\"_Button_a73d48 _default_a73d48 _active_a73d48 _rounded_a73d48\\">
    <div class=\\"_content_a73d48\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option one
    </div>
    <!--v-if-->
  </button><button type=\\"button\\" class=\\"_Button_a73d48 _default_a73d48 _rounded_a73d48\\">
    <div class=\\"_content_a73d48\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option two
    </div>
    <!--v-if-->
  </button><button type=\\"button\\" class=\\"_Button_a73d48 _default_a73d48 _rounded_a73d48\\">
    <div class=\\"_content_a73d48\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option three
    </div>
    <!--v-if-->
  </button></div>"
`;

exports[`Select multiple 1`] = `
"<div class=\\"_Select_1b074e _multiple_1b074e\\"><button style=\\"--bnt-rgb: 58,134,255;\\" type=\\"button\\" class=\\"_Button_a73d48 _default_a73d48 _active_a73d48 _rounded_a73d48\\">
    <div class=\\"_content_a73d48\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option one
    </div>
    <!--v-if-->
  </button><button type=\\"button\\" class=\\"_Button_a73d48 _default_a73d48 _rounded_a73d48\\">
    <div class=\\"_content_a73d48\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option two
    </div>
    <!--v-if-->
  </button><button type=\\"button\\" class=\\"_Button_a73d48 _default_a73d48 _rounded_a73d48\\">
    <div class=\\"_content_a73d48\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option three
    </div>
    <!--v-if-->
  </button></div>"
`;
